--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,19 @@
-version: "3.8"
+version: '3.8'
 
 services:
+  whatsapp_service:
+    build:
+      context: ./whatsapp_service
+    container_name: whatsapp_service
+    ports:
+      - "8000:8000"
+    depends_on:
+      - llm_service
+    env_file:
+      - .env
+ 
+
   llm_service:
     build:
       context: ./llm_service
-    ports:
-      - "8001:8001"
-    environment:
-      OPENROUTER_API_KEY: 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
-    restart: unless-stopped
-
+    container_name: llm_service
