--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
  
 
   llm_service:
-    build:
-      context: ./llm_service
+    build: ./llm_service
     container_name: llm_service
+    ports:
+      - "8001:8001"
