--- a/whatsapp_service/Dockerfile
+++ b/whatsapp_service/Dockerfile
@@ -1,18 +1,11 @@
-# Use a lightweight Python image
 FROM python:3.11-slim
 
-# Set working directory
 WORKDIR /app
 
-# Install dependencies
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy app code
-COPY app/ ./app/
+COPY . .
 
-# Expose FastAPI on port 8002
-EXPOSE 8002
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
 
-# Run the server
-CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8002"]
